--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,9 @@
 <head>
     <link rel="stylesheet" href="https://themeswitcher.csh.rit.edu/api/get" media="screen">
     <link rel="stylesheet" href="{{url_for('static', filename='css/styles.css')}}">
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <title>My App</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
