--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,5 +36,6 @@
           Welcome to Computer Science House <!--TODO: Environment Variable-->
         </h1>
     </div>
+    <div id="transcription"></div>
 </body>
 </html>
